@@ -7,6 +7,8 @@ Version 6.5.3 - not yet released
   - eliminate flickering in the cross section on Windows
   - fix wrong radial display in target dialog
   - start at terrain center when there's no GPS fix and no home location
+* task
+  - fix line OZ rounding error (#2599)
 * devices
   - FLARM: fix IGC file download on firmware 5.09 (#2619)
 * Android
